finished the assignment

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,7 +10,18 @@
 <body>
     <h1>Task Manager</h1>
     <h2>Tasks</h2>
-    <h3><button>Create Task</button></h3>
+    <div id="newTask">
+        <h3  ><a href="#" ><button id="create" >Create Task</button></a></h3>
+    </div>
+    <!-- <div>
+        <form action="index.js">
+        Filter: 
+            <input id="complete" type="radio" value=true>
+            <label for="complete">Completed tasks</label>
+            <input id="incomplete" type="radio" value=false>
+            <label for="incomplete">Incomplete tasks</label>
+        </form>
+    </div> -->
     <div id="tasks"></div>
     <script src="index.js"></script>
 </body>
