implemented error handling

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     #message-container {
       width: 80%;
-      max-width: 800px; /* Adjust the maximum width as needed */
+      max-width: 800px;
       overflow-y: auto;
       border: 1px solid #ccc;
       padding: 10px;
       margin-bottom: 20px;
-      max-height: 60vh; /* Limit message container height */
+      max-height: 60vh;
     }
 
     #message-container div {
@@ -41,7 +41,7 @@
 
     #send-container {
       width: 80%;
-      max-width: 800px; /* Adjust the maximum width as needed */
+      max-width: 800px;
       display: flex;
       margin-top: 10px;
     }
